<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                android:id="@+id/btnTicketChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cu_backgroundColor="@color/primary_700"
                app:cu_cornerAll="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/boleto_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTicketName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/infantil_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/tvPriceChildTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/empty_price"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvTicketName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

            </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

            <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                android:id="@+id/btnTicketAdult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="22dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cu_backgroundColor="@color/primary_700"
                app:cu_cornerAll="25dp"
                app:layout_constraintBottom_toBottomOf="@+id/btnTicketChild"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btnTicketChild"
                app:layout_constraintTop_toTopOf="@+id/btnTicketChild">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/boleto_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTicketChildName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/adulto_text"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/tvPriceAdultTicket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/empty_price"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tvTicketChildName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

            </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

            <TextView
                android:id="@+id/tvImages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_neue_bold"
                android:text="@string/paquetes_text"
                android:textColor="@color/black_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnAddPackage"
                app:layout_constraintStart_toStartOf="@+id/btnTicketChild"
                app:layout_constraintTop_toTopOf="@+id/btnAddPackage" />

            <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                android:id="@+id/btnAddPackage"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginTop="26dp"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:visibility="invisible"
                app:cu_cornerAll="10dp"
                app:layout_constraintEnd_toEndOf="@+id/btnTicketAdult"
                app:layout_constraintTop_toBottomOf="@+id/btnTicketAdult"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pc_more_simbol"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mRecyclerPackages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/tvErrorMessage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAddPackage"
                app:layout_constraintVertical_bias="0.0"
                app:spanCount="3"
                tools:listitem="@layout/pc_package_item" />

            <com.boreal.commonutils.component.shadowlayout.CUShadowLayout
                android:id="@+id/btnReady"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="39dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:sl_shadow_color="@color/primary_300"
                app:sl_shadowed="true">

                <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cu_backgroundColor="@color/primary_700"
                    app:cu_cornerLeftSide="10dp"
                    app:cu_cornerRightSide="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="Guardar"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

            </com.boreal.commonutils.component.shadowlayout.CUShadowLayout>

            <TextView
                android:id="@+id/tvErrorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/redError"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/btnReady"
                app:layout_constraintEnd_toEndOf="@+id/btnReady"
                app:layout_constraintStart_toStartOf="@+id/btnReady"
                tools:text="Este es un mensaje de error"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>