<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                android:id="@+id/btnBack"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                android:elevation="10dp"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cu_cornerLeftBottom="10dp"
                app:cu_cornerLeftTop="10dp"
                app:cu_cornerRightSide="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pc_close"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:textColor="@color/black_700"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnBack"
                tools:text="Boleto Adulto" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <com.boreal.commonutils.component.cunumberamount.CUNumberAmount
                android:id="@+id/txtPriceTicket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:na_integer_size="40" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/txtPriceTicket"
                app:layout_constraintStart_toStartOf="@+id/txtPriceTicket"
                app:layout_constraintTop_toBottomOf="@+id/txtPriceTicket">


                <TextView
                    android:id="@+id/txtMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/amount_text"
                    android:textAlignment="center"
                    android:textColor="@color/gray_subtitle"
                    android:textSize="20sp" />

            </LinearLayout>


            <com.boreal.commonutils.component.shadowlayout.CUShadowLayout
                android:id="@+id/btnReady"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                app:sl_shadow_color="@color/primary_300"
                app:sl_shadowed="true">

                <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                    android:id="@+id/btnAddPrice"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginHorizontal="26dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cu_backgroundColor="@color/primary_700"
                    app:cu_cornerLeftSide="15dp"
                    app:cu_cornerRightSide="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/add_text"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

            </com.boreal.commonutils.component.shadowlayout.CUShadowLayout>

            <com.boreal.commonutils.component.roundablelayout.CURoundableLayout
                android:id="@+id/btnAuthImg"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginHorizontal="38dp"
                android:visibility="gone"
                app:cu_cornerAll="15dp"
                app:cu_strokeLineColor="@color/primary_700"
                app:cu_strokeLineWidth="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnReady">


                <TextView
                    android:id="@+id/txtUploadText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/change_text"
                    android:textAlignment="center"
                    android:textColor="@color/primary_700"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.boreal.commonutils.component.roundablelayout.CURoundableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>